-add tests, -docs:style

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "tsc && fockbuilder"
+    "build": "tsc && fockbuilder",
+    "test": "ts-mocha ./src/test/**/*.test.ts"
   },
   "files": [
+    "!./**/test",
     "./**/*.js",
     "./**/*.js.map",
     "./**/*.d.ts",
@@ -36,8 +38,12 @@
   },
   "homepage": "https://github.com/FOCKUSTY/bit-field#readme",
   "devDependencies": {
+    "@types/expect": "^24.3.2",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.3",
     "fock-builder": "^2.1.0-beta.1",
+    "mocha": "^11.7.0",
+    "ts-mocha": "^11.1.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
