--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fbit-field",
-  "version": "1.1.0-alpha.1b",
+  "version": "1.1.1-alpha.1",
   "description": "bit field for some systems",
   "main": "index.js",
   "types": "index.d.ts",
