--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fbit-field",
-  "version": "1.4.0-alpha.1b",
+  "version": "1.4.0-alpha.1c",
   "description": "bit field for some systems",
   "main": "index.js",
   "types": "index.d.ts",
@@ -38,7 +38,6 @@
   },
   "homepage": "https://github.com/FOCKUSTY/bit-field#readme",
   "devDependencies": {
-    "@types/expect": "^24.3.2",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.3",
     "fock-builder": "^2.1.0-beta.1",
