--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2023",
+    "target": "ES2022",
     "module": "CommonJS",
     "rootDir": "./src/",
     "baseUrl": "./",
